--- a/index.html
+++ b/index.html
@@ -1,36 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" media="screen and (max-width: 375px)" href="mobile.css">
+  <link rel="stylesheet" media="screen and (min-width: 1440px)" href="desktop.css">
   <title>Frontend Mentor | Article preview component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    *{
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
+    }
+
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <main>
+    <section>
+      <div>
+        <img id="drawers"src="images/drawers.jpg" alt="">
+      </div>
+    </section>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
+    <section id="sec-text">
+      <div id="encabezado">
+        <h2>
+          Shift the overall look and feel by adding these wonderful
+          touches to furniture in your home
+        </h2>
+      </div>
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
+      <div id="texto">
+        <p>
+          Ever been in a room and felt like something was missing? Perhaps
+          it felt slightly bare and uninviting. I’ve got some simple tips
+          to help you make any room feel complete.
+        </p>
+      </div>
 
-  Michelle Appleton
-  28 Jun 2020
+      <div id="compartir">
+        <div id="div-michelle">
+          <img id="michelle" src="images/avatar-michelle.jpg" alt="">
+        </div>
 
-  Share
-  
+        <div id="datos">
+          <p>
+            Michelle Appleton
+          </p>
+          
+          <p>
+            28 Jun 2020
+          </p>
+        </div>
+
+        <div id="share">
+          <p> 
+            Share
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
