Acabamos el reto XD

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <body>
   <main>
-    <section>
+    <section id="sec-imagen">
       <div>
-        <img id="drawers"src="images/drawers.jpg" alt="">
+        <img id="drawers" src="images/drawers.jpg" alt="">
       </div>
     </section>
 
